Updated groupByHour to be more stable by using Duration